# Quasar

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
ai_agent/: __init__.py  conversation.py  conversation_store.py  executor.py  interface.py  parallel_executor.py  protocol.py
ai_config/: __init__.py  ai.py  ai_config.py  ai_types.py  env_config.py  paths_config.py
ai_media_resource/: __init__.py  adapter_base.py  adapter_cloud.py  adapter_factory.py  adapter_local.py  cache.py  registry.py  task_executor.py
ai_models/: __init__.py  remote_task_runner.py  utils.py
ai_models/base_pool/: __init__.py  legacy_fallback.py  registry.py  responses.py
ai_modules/: test_imports.py
ai_modules/detection/: base.py
ai_modules/image_generate/: base.py
ai_modules/integrated/: base.py  common.py  context.py  loop_mode.py  stream_handler.py  stream_utils.py  sync_handler.py  workflow_bridge.py
ai_modules/music_generate/: base.py
ai_service/: entrance.py  module_settings.yaml
ai_tools/: ai_config_collector.py  common.py  concurrency.py  load_tools.py  qwen3_vl_embedding.py  registry.py  response_adapter.py  test.py  warmup.py  workflow_executor.py
ai_workflow/: __init__.py  adapter.py  bridge.py  command_registry.py  executor.py  loop_state.py  nodes.py  progress.py  registry.py  state.py  streaming.py
cai/: __init__.py  app.py  cli.py  runtime.py
cai/plugins/: __init__.py  (+1 more)
docs/: API_REFERENCE.md
examples/: cli_chat.py  fastapi_websocket.py
tests/: test_env_config.py  test_hunyuan_log_sanitization.py  test_removed_legacy_providers.py
(+127 files in other folders)
