[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar"
version = "0.1.0"
description = "Quasar AI runtime for CoronaEngine editor integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
langchain = []
workflow = []
media = []
cabbage = []
web = []
object-recognition = []

[project.scripts]
quasar-chat = "Quasar.cai.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = ".."

[tool.setuptools.packages.find]
where = [".."]
include = ["Quasar*"]
